// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-monetary-provisioning Renders with all props provided 1`] = `
<form-control-monetary-provisioning>
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="amount" part="label text color font-family">
      Amount
    </label>
    <div class="input-group">
      <span class="input-group-text" part="input-group-text">
        $
      </span>
      <input class="form-control is-invalid monetary" id="amount" name="amount" part="input-invalid input text color font-family background-color" type="text" value="1,500">
    </div>
    <small class="form-text text-muted" id="form-help-text-amount" part="text color font-family">
      Enter payment amount
    </small>
    <small class="form-text text-danger" id="form-error-text-amount" part="text-danger text color font-family">
      Invalid amount
    </small>
  </div>
</form-control-monetary-provisioning>
`;

exports[`form-control-monetary-provisioning renders correctly with default props 1`] = `
<form-control-monetary-provisioning>
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="amount" part="label text color font-family">
      Amount
    </label>
    <div class="input-group">
      <span class="input-group-text" part="input-group-text">
        $
      </span>
      <input class="form-control monetary" id="amount" name="amount" part="input-group input text color font-family background-color" type="text">
    </div>
  </div>
</form-control-monetary-provisioning>
`;
